card text alignment corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,8 +219,10 @@ h1, h2, h3, h4, h5, h6 {
   background: url("../img/Background.jpg") top right no-repeat;
   background-position: center;
   background-size: cover;
+  position: relative;
  
 }
+
 
   .card1
 {
@@ -246,9 +248,17 @@ padding-bottom: 10px;
 }
 .card1 h4
 {
- font-size: 35px;
- font-weight: 600;
+ font-size: 17px;
+ font-weight: bold;
  font-family:Ink Free ;
+ position: relative;
+ align-items: center;
+ background-position: center;
+ background-size: cover;
+ display: flex;
+ justify-content: center;
+ 
+ 
 }
 
 .social
@@ -261,6 +271,7 @@ padding-bottom: 10px;
   background-size: cover;
   color: #dae0e5;
   font-size: 25px;
+  position: relative;
   text-align: center;
   padding: 30px 0;
 }
@@ -270,12 +281,12 @@ padding-bottom: 10px;
   background: #ebeaec;
   color: rgb(93, 10, 89);
   line-height: 1;
-  padding: 8px 0 0 0;
+  padding: 6px 0 0 0;
   margin-right: 4px;
   border-radius: 50%;
   text-align: center;
-  width: 36px;
-  height: 36px;
+  width: 30px;
+  height: 30px;
   transition: 0.3s;
 }
 
